Fix grid layout in Edge
Gutters were too small, leading to unexpected column counts.

--- a/boilerplate/public_html/themes/custom/{{ NAME }}/src/sass/layout/grid.scss
+++ b/boilerplate/public_html/themes/custom/{{ NAME }}/src/sass/layout/grid.scss
@@ -90,7 +90,7 @@ $columns: (
       grid-gap: calc(var(--gutter-y) * 2) calc(var(--gutter-x) * 2);
 
       @include edge {
-        grid-gap: $half-gutter;
+        grid-gap: $gutter;
       }
     }
 
